# cupage

./: .gitignore  .projections.json  .travis.yml  CONTRIBUTING.rst  MANIFEST.in  NEWS.rst  README.rst  __pkg_data__.py  cupage.py  nose2.cfg  setup.cfg  setup.py
.be/: settings
.be/bugs/07d24f07-afd0-4f17-9d35-94c47e75dab1/: values
.be/bugs/2038ce0a-1ebd-4c12-8fde-367c76d1d8c1/: values
.be/bugs/25d22f3a-2a6f-4ab2-b2ea-302af39693ba/: values
.be/bugs/4ca4dac9-9c9f-46a2-82e8-9a027a537191/: values
.be/bugs/5e263f4b-6926-47d7-a693-e8515dd3dd5d/: values
.be/bugs/73d1b047-1f5d-466c-83a9-924c34b81ecd/: values
.be/bugs/8db1434f-9e48-421c-b54d-6614b14a36c1/: values
.be/bugs/b0873c66-1b3e-4fc9-a42d-5cbecac022f0/: values
.ditz/: issue-04391bcd338ae27d65de6223860fa0737600f862.yaml  issue-17d5b16b9c9e925eb1c9977257932158d6317042.yaml  issue-2d7ab778725e83641b96affd8b5a35ce6d190b51.yaml  issue-37566cea97ca7ae9a55f6028a71aa9b4891e129e.yaml  issue-66ac5822a9278ad3cf9e7c9c7b2b4f5f556f6738.yaml  issue-708b66dd9ceed5db604b9b634991f98dcd5a529d.yaml  issue-8b178253b7bf0cf12e361a94d84e449ccd19904f.yaml  issue-b08c17efdcbaa7dffafcf02b1b84098c05243922.yaml  issue-c3dc0bbbddb087e4bdc0c45fc26eeb5d725d25c3.yaml  issue-cc8589bcfb9598a934f8f913149fcc697cef9bf1.yaml  issue-db554ab5ad9e2bc740adfb23f7c23b4f75e76546.yaml  issue-e14f46089635875c170b3dc6e20d117c00069267.yaml  issue-f391776994f0ea28ec00386382207ecf6e1c10e9.yaml  issue-f9a60443357843b06767cf82d85db44446bf16e5.yaml  project.yaml
.ditz/release-0.5.0/: project.yaml
.github/: CONTRIBUTING.rst  ISSUE_TEMPLATE.rst
cupage/: __init__.py  _version.py  cmdline.py  commandline.py  compat.py  i18n.py  utils.py
cupage/locale/: cupage.pot
doc/: Makefile  alternatives.rst  appendix.rst  background.rst  conf.py  configuration.rst  cupage.1.rst  docutils.css  envvars.rst  glossary.rst  index.rst  release.rst  upgrading.rst  usage.rst  wordlist.txt
doc/api/: Site.rst  cmdline.rst  commandline.rst  index.rst  utils.rst
extra/: _cupage  doap.rdf  requirements-base.txt  requirements-dev.txt  requirements-doc.txt  requirements-test.txt  requirements.txt
libcupage/: __init__.py  _version.py  commandline.py
test/: __init__.py  grab_net_sources.py  mock.py
tests/: test___init__.py  test_utils.py
(+19 files in other folders)
